create views for prodcuts

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,19 @@
  *= require_tree .
  *= require_self
  */
+
+ * {
+   box-sizing: border-box;
+
+ }
+
+ body{
+
+  width:95%;
+ }
+
+ .login{
+  float:right;
+  margin:0;
+
+ }
