--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,3 +1,45 @@
 // Place all the styles related to the products controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+h1, h2 {
+  text-align: center;
+}
+
+
+.product{
+
+  margin:auto;
+
+}
+
+
+.product-name{
+  display:inline-block;
+  margin:0;
+  float:left;
+
+}
+
+.price{
+  display:inline-block;
+  float:right;
+  margin:0;
+}
+
+.product-description{
+  float:left;
+  margin:0;
+  width:90%;
+}
+
+.product-img {
+  display:block;
+  width:300px;
+  height: 300px;
+  margin: 10px 0;
+  padding:0;
+}
+
+.add-product-form {
+  text-align: center;
+}
