--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,2 +1,29 @@
-<h1>Products#new</h1>
-<p>Find me in app/views/products/new.html.erb</p>
+<h2>Please fill the form to add new product</h2>
+
+<div class="add-product-form">
+
+
+<%= form_for(@product) do |f| %>
+
+  <div class="field">
+    <%= f.label :name %><br />
+    <%= f.text_field :name %>
+  </div>
+  <div class="field">
+    <%= f.label :description %><br />
+    <%= f.text_area :description %>
+  </div>
+  <div class="field">
+    <%= f.label :price_in_cents %><br />
+    <%= f.number_field :price_in_cents %>
+  </div>
+  <div class="field">
+    <%= f.label :product_img_url %><br />
+    <%= f.text_field :product_img_url %>
+  </div>
+  <div class="actions">
+    <%= f.submit %>
+  </div>
+  <% end %>
+
+</div>
