--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,2 +1,9 @@
-<h1>Products#show</h1>
-<p>Find me in app/views/products/show.html.erb</p>
+<h1>Product: <%= @product.name %></h1>
+
+<div class="product">
+
+<p class='product-description'>Product Description: <%= @product.description %></p>
+<p class='price'> <%="Price: #{@product.price_in_cents/100.00}" %></p>
+<%= image_tag(@product.product_img_url,class:'product-img') %>
+<p> <%= link_to 'Edit', edit_product_path(@product) %> | <%= link_to 'Delete', @product %> | <%= link_to 'Back', products_url %></p>
+</div>
