--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,7 +11,7 @@
 <% @products.each do |product|%>
 <p class = 'product-name'><%= product.name %></p>
 
-<p class='price'><%="$#{product.price_in_cents/100.00}"%></p> <br>
+<p class='price'><%="$#{product.formatted_price}"%></p> <br>
 
 <p class='product-description'><%= product.description%> </p>
 
