--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,3 +1,4 @@
+<p class = 'login'> <%= link_to 'Login', new_session_path %> | <%= link_to 'Sign up', new_user_path %></p>
 <h1>Welcome to Rainforest</h1>
 <% if @products.count == 0%>
 <h2> There is no products</h2>
