--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,10 @@
-<p class = 'login'> <%= link_to 'Login', new_session_path %> | <%= link_to 'Sign up', new_user_path %></p>
+<p class = 'login'>
+  <% if current_user %>
+    Signed in as <%= current_user.email %>. <%= link_to "Log out", session_path("current"), :method => :delete %>
+  <% else %>
+    <%= link_to "Log in", new_session_path %> or <%= link_to "Sign up", new_user_path %>
+  <% end %>
+</p>
 <h1>Product: <%= @product.name %></h1>
 
 <div class="product">
